# eurydice

./: .editorconfig  .env.dev.example  .env.example  .env.prod.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  compose.dev.yml  compose.kibana.yml  compose.localprod.yml  compose.prod.yml  compose.yml
.devcontainer/: .env.destination  abc.sh  (+14 more)
backend/: .dockerignore  .safety-policy.yml  .trivyignore  Makefile  Pipfile  README.md  manage.py  pyproject.toml  settings.py  setup.cfg
backend/docker/: Dockerfile  entrypoint.sh  healthcheck.py
backend/eurydice/common/: association.py  enums.py  exceptions.py  minio.py  protocol.py
backend/eurydice/common/api/: authentication.py  filters.py  middlewares.py  permissions.py  urls.py
backend/eurydice/common/api/docs/: custom_spectacular.py  decorators.py  serializers.py  utils.py
backend/eurydice/common/api/pagination/: __init__.py  core.py  dataclasses.py  openapi.py
backend/eurydice/common/api/serializers/: __init__.py  association_token.py  hex_bytes_field.py  user_details.py
backend/eurydice/common/api/views/: __init__.py  openapi.py  server_metadata.py  token.py  user_details.py  user_login.py
backend/eurydice/common/backoffice/: admin.py  urls.py
backend/eurydice/common/bytes2words/: __init__.py  bytes2words.py  word_list.txt
backend/eurydice/common/cleaning/: repeated_task.py
backend/eurydice/common/config/: gunicorn.conf.py
backend/eurydice/common/config/settings/: base.py  dev.py  mypy.py  test.py
backend/eurydice/common/logging/: __init__.py  formatters.py  logger.py
backend/eurydice/common/models/: __init__.py  base.py  fields.py  user.py
backend/eurydice/common/permissions/: apps.py  models.py
backend/eurydice/common/permissions/migrations/: 0001_initial.py
backend/eurydice/common/redoc/: apps.py  urls.py
backend/eurydice/common/redoc/templates/: index.html
backend/eurydice/common/utils/: orm.py  s3.py  signals.py
backend/eurydice/destination/api/: apps.py  exceptions.py  filters.py  negotiation.py  permissions.py  responses.py  serializers.py  urls.py
backend/eurydice/destination/api/docs/: decorators.py
backend/eurydice/destination/api/views/: __init__.py  incoming_transferable.py  metrics.py  server_metadata.py  status.py  user_association.py
backend/eurydice/destination/backoffice/: admin.py  apps.py
backend/eurydice/destination/cleaning/dbtrimmer/: __main__.py  dbtrimmer.py
backend/eurydice/destination/cleaning/file_remover/: __main__.py  file_remover.py
backend/eurydice/destination/cleaning/s3remover/: __main__.py  s3remover.py
backend/eurydice/destination/config/: urls.py  wsgi.py
backend/eurydice/destination/config/settings/: base.py  dev.py  test.py
backend/eurydice/destination/core/: apps.py
backend/eurydice/destination/core/migrations/: 0001_initial.py  0001_squashed_0022_remove_minio.py  0002_alter_user_profile_constraints.py  0003_add_incoming_transferable_fields.py  0004_update_incoming_transferable_constraints.py  0005_update_incoming_transferable_constraints.py  0006_add_incoming_transferable_rehash_intermediary.py  0007_add_s3_upload_part.py  0008_remove_incomingtransferable_s3_nb_uploaded_parts.py  0009_alter_incomingtransferable_rehash_intermediary.py  0010_alter_incomingtransferable_created_at.py  0011_added_bytes_received_to_transferables.py  0012_add_help_text_to_base_fields.py  0013_alter_incomingtransferable_created_at.py  0014_add_removed_state_to_incoming_transferable.py  0015_add_constraints.py  0016_incomingtransferable_eurydice_in_created_ac8963_idx.py  0017_alter_incomingtransferable_index_together.py  0018_alter_incomingtransferable_s3_upload_id.py  0019_remove_incomingtransferable_updated_at_and_more.py  0020_user_last_access.py  0021_lastpacketreceivedat.py  0022_remove_minio.py  0023_update_incomingtransferable_finished_at_state_constraint.py
backend/eurydice/destination/core/models/: __init__.py  file_upload_part.py  incoming_transferable.py  last_packet_received_at.py  s3_upload_part.py  user.py
backend/eurydice/destination/receiver/: __main__.py  main.py  packet_receiver.py  transferable_ingestion.py  transferable_ingestion_fs.py
backend/eurydice/destination/receiver/packet_handler/: __init__.py  packet_handler.py  s3_helpers.py
backend/eurydice/destination/receiver/utils/: decryption_tools.py  keypair.py
backend/eurydice/destination/storage/: fs.py
backend/eurydice/destination/utils/: rehash.py
backend/eurydice/origin/api/: apps.py  exceptions.py  filters.py  parsers.py  serializers.py  urls.py
backend/eurydice/origin/api/docs/: decorators.py
backend/eurydice/origin/api/utils/: __init__.py  metadata_headers.py  partitioned_stream.py
backend/eurydice/origin/api/views/: __init__.py  metrics.py  outgoing_transferable.py  server_metadata.py  status.py  user_association.py
backend/eurydice/origin/backoffice/: admin.py  apps.py
backend/eurydice/origin/cleaning/dbtrimmer/: __main__.py  dbtrimmer.py
backend/eurydice/origin/cleaning/file_remover/: __main__.py  file_remover.py
backend/eurydice/origin/config/: urls.py  wsgi.py
backend/eurydice/origin/config/settings/: base.py  dev.py  test.py
backend/eurydice/origin/core/: apps.py  enums.py  signals.py
backend/eurydice/origin/core/migrations/: 0001_squashed_0023_make_auto_fields_non_editable.py  0001_squashed_0029_remove_minio.py  0024_maintenance.py  0025_remove_outgoingtransferable_updated_at_and_more.py  0026_alter_transferablerange_byte_offset.py  0027_user_last_access.py  0028_lastpacketsentat.py  0029_remove_minio.py  (+1 more)
backend/eurydice/origin/sender/: __init__.py  __main__.py  main.py  packet_sender.py  transferable_history_creator.py  user_selector.py  utils.py
backend/eurydice/origin/storage/: fs.py
backend/eurydice/templates/admin/: change_list_with_date_pickers.html
backend/tests/: conftest.py  utils.py
backend/tests/common/: decryption_constants.py
backend/tests/common/unit/: test_association.py  test_bytes2words.py  test_protocol.py
backend/tests/destination/integration/: factory.py
backend/tests/origin/integration/: factory.py
(+438 files in other folders)
