[project]
name = "eurydice"
version = "1.6.1"
requires-python = "~=3.12.0"
dependencies = [
  "gunicorn>=23.0",
  "djangorestframework>=3.16.1",
  "django-environ>=0.12.0",
  "drf-spectacular>=0.29.0",
  "psycopg2-binary>=2.9.11",
  "django>=5.2.9",
  "python-dateutil>=2.9.0.post0",
  "humanfriendly>=10.0",
  "whitenoise>=6.11.0",
  "msgpack>=1.1.2",
  "pydantic>=2.12.5",
  "django-filter>=25.2",
  "jinja2>=3.1.6",
  "setuptools>=80.9",
  "django-stubs[compatible-mypy]>=5.2.8",
  "djangorestframework-stubs>=3.16.6",
  "pynacl>=1.6.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "mirror"
url = "https://pypi.org/simple"
priority = "primary"
default = true

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-django>=4.11.1",
  "factory-boy>=3.3.3",
  "hypothesis>=6.148.7",
  "coverage>=7.13.0",
  "pytest-cov>=7.0.0",
  "ipython>=9.8.0",
  "ipdb>=0.13.13",
  "mypy-extensions>=1.1.0",
  "bandit>=1.9.2",
  "Faker>=38.2.0",
  "radon>=6.0.1",
  "freezegun>=1.5.5",
  "mypy>=1.19.0",
  "ruff>=0.14.8",
]

[tool.coverage.run]
branch = true
omit = [
  "**/__init__.py",
  "**/apps.py",
  "**/admin.py",
  "**/urls.py",
  "**/wsgi.py",
  "**/settings/*",
  "**/migrations/*",
]
data_file = ".report/.coverage"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = ".report/cobertura-coverage.xml"


[tool.pytest.ini_options]
filterwarnings = [
  # Transform all warnings into errors.
  "error",
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

[tool.mypy]
# pyproject.toml support progress:
# https://github.com/python/mypy/issues/5205
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "eurydice.common.config.settings.mypy"

[[tool.mypy.overrides]]
module = ["*.settings.*", "*.migrations.*", "tests.*"]
ignore_errors = true

[tool.bandit]
targets = ["eurydice"]
exclude_dirs = ["tests", ".venv", "venv"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [".venv", "eurydice/destination/core/migrations", "eurydice/origin/core/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F403", "F405"]
